Ensure that list text aligns left by default.

--- a/public_html/bse-admin/css/admin.css
+++ b/public_html/bse-admin/css/admin.css
@@ -1186,6 +1186,7 @@ div + .meta {
 .list th,
 .list td,
 .list li {
+    text-align: left;
     padding: 0.25em;
     position: relative;
 }
